fix the org.emfjson.jackson dependency issue in all projects

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/jssimulator.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/jssimulator.css
@@ -1,6 +1,10 @@
 /* Add borders to main divs. */
-.simulationsDiv, .parametersDiv {
+.simulationsDiv{
 
-	border-style: dotted;	
-	border-color: blue;
+}
+
+.parametersDiv {
+
+	border-left: 1px solid;
+	
 }
