Check box mouseover issue

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
@@ -69,7 +69,7 @@ body {padding:3%;background:#fff}
     float: left;
 }
 
-.demoform input {
+.demoform input:not([type=checkbox]) {
     min-width: 320px;   /* depends how much minimum width you require */
 }
 .nobefore:before{
