--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css
@@ -63,202 +63,19 @@ body {padding:3%;background:#fff}
 
 
 
-
-
-
-
-
-
-
-.MuiInput-root-104 {
-  color: rgba(0, 0, 0, 0.87);
-  display: inline-flex;
-  position: relative;
-  align-items: baseline;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-}
-label + .MuiInput-formControl-105 {
-  margin-top: 16px;
-}
-.MuiInput-inkbar-106:after {
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 2px;
-  content: "";
-  pointer-events: none;
-}
-.MuiInput-inkbar-106.MuiInput-focused-108:after {
-  transform: scaleX(1);
-}
-.MuiInput-error-107:after {
-  transform: scaleX(1);
-  background-color: #ff1744;
-}
-.MuiInput-disabled-109 {
-  color: rgba(0, 0, 0, 0.38);
-}
-.MuiInput-underline-110:before {
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 1px;
-  content: "";
-  position: absolute;
-  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  pointer-events: none;
-  background-color: rgba(0, 0, 0, 0.42);
-}
-.MuiInput-underline-110:hover:not(.MuiInput-disabled-109):before {
-  height: 2px;
-  background-color: rgba(0, 0, 0, 0.87);
-}
-.MuiInput-underline-110.MuiInput-disabled-109:before {
-  background: transparent;
-  background-size: 5px 1px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.42) 33%, transparent 0%);
-  background-repeat: repeat-x;
-  background-position: left top;
-}
-.MuiInput-multiline-111 {
-  padding: 6px 0 7px;
-}
-.MuiInput-fullWidth-112 {
-  width: 100%;
-}
-.MuiInput-input-113 {
-  font: inherit;
-  width: 100%;
-  color: currentColor;
-  border: 0;
-  margin: 0;
-  padding: 6px 0 7px;
-  display: block;
-  min-width: 0;
-  box-sizing: content-box;
-  background: none;
-  vertical-align: middle;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-.MuiInput-input-113::-webkit-input-placeholder {
-  color: currentColor;
-  opacity: 0.42;
-  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-}
-.MuiInput-input-113::-moz-placeholder {
-  color: currentColor;
-  opacity: 0.42;
-  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-}
-.MuiInput-input-113:-ms-input-placeholder {
-  color: currentColor;
-  opacity: 0.42;
-  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-}
-.MuiInput-input-113::-ms-input-placeholder {
-  color: currentColor;
-  opacity: 0.42;
-  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-}
-.MuiInput-input-113:focus {
-  outline: 0;
-}
-.MuiInput-input-113:invalid {
-  box-shadow: none;
-}
-.MuiInput-input-113::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113::-webkit-input-placeholder {
-  opacity: 0;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113::-moz-placeholder {
-  opacity: 0;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113:-ms-input-placeholder {
-  opacity: 0;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113::-ms-input-placeholder {
-  opacity: 0;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113:focus::-webkit-input-placeholder {
-  opacity: 0.42;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113:focus::-moz-placeholder {
-  opacity: 0.42;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113:focus:-ms-input-placeholder {
-  opacity: 0.42;
-}
-label[data-shrink=false] + .MuiInput-formControl-105 .MuiInput-input-113:focus::-ms-input-placeholder {
-  opacity: 0.42;
-}
-.MuiInput-inputDense-114 {
-  padding-top: 3px;
-}
-.MuiInput-inputDisabled-115 {
-  opacity: 1;
-}
-.MuiInput-inputSingleline-116 {
-  height: 1.1875em;
-}
-.MuiInput-inputMultiline-117 {
-  resize: none;
-  padding: 0;
-}
-.MuiInput-inputSearch-118 {
-  -webkit-appearance: textfield;
+.modal-content.ui-resizable {
+  overflow-y: scroll;
 }
 
 
-
-
-
-
-
-.MuiFormLabel-root-100 {
-  color: rgba(0, 0, 0, 0.54);
-  padding: 0;
-  font-size: 1rem;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  line-height: 1;
-}
-.MuiFormLabel-focused-101 {
-  color: #304ffe;
-}
-.MuiFormLabel-error-102 {
-  color: #ff1744;
-}
-.MuiFormLabel-disabled-103 {
-  color: rgba(0, 0, 0, 0.42);
+.control-labelal{
+    float: left;
 }
 
-
-
-
-
-
-.MuiInputLabel-root-94 {
-  transform-origin: top left;
+.demoform input:not([type=checkbox]) {
+    min-width: 320px;   /* depends how much minimum width you require */
 }
-.MuiInputLabel-formControl-95 {
-  top: 0;
-  left: 0;
-  position: absolute;
-  transform: translate(0, 23px) scale(1);
+.nobefore:before{
+   content: none;
 }
-.MuiInputLabel-labelDense-96 {
-  transform: translate(0, 21px) scale(1);
-}
-.MuiInputLabel-shrink-97 {
-  transform: translate(0, 1.5px) scale(0.75);
-  transform-origin: top left;
-}
-.MuiInputLabel-animated-98 {
-  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
-}
-.MuiInputLabel-disabled-99 {
-  color: rgba(0, 0, 0, 0.42);
-}
-
 
