--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
@@ -1,118 +1,126 @@
-body {padding:3%;background:#fff}
+body {
+	padding: 3%;
+	background: #fff
+}
 
 .panel-heading {
-    padding: 0
+	padding: 0
 }
+
 .panel-heading a {
-    display: block;
-    padding: 20px 10px;
+	display: block;
+	padding: 20px 10px;
 }
+
 .panel-heading a.collapsed {
-    background: #fff
+	background: #fff
 }
+
 .panel-heading a {
-    background: #f7f7f7;
-    border-radius: 5px;
+	background: #f7f7f7;
+	border-radius: 5px;
 }
+
 .panel-heading a:after {
-    content: '-'
+	content: '-'
 }
+
 .panel-heading a.collapsed:after {
-    content: '+'
+	content: '+'
 }
-.nav.nav-tabs li a,
-.nav.nav-tabs li.active > a:hover,
-.nav.nav-tabs li.active > a:active,
-.nav.nav-tabs li.active > a:focus {
-    border-bottom-width: 0px;
-    outline: none;
+
+.nav.nav-tabs li a, .nav.nav-tabs li.active>a:hover, .nav.nav-tabs li.active>a:active,
+	.nav.nav-tabs li.active>a:focus {
+	border-bottom-width: 0px;
+	outline: none;
 }
+
 .nav.nav-tabs li a {
-    padding-top: 20px;
-    padding-bottom: 20px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
+
 .tab-pane {
-    background: #fff;
-    padding: 10px;
-    border: 1px solid #ddd;
-    margin-top: -1px;
+	background: #fff;
+	padding: 10px;
+	border: 1px solid #ddd;
+	margin-top: -1px;
 }
-
-
 
 /* used for sidebar tab/collapse*/
-@media (max-width: 991px) {
-  .visible-tabs {
-    display: none;
-  }
+@media ( max-width : 991px) {
+	.visible-tabs {
+		display: none;
+	}
 }
 
-@media (min-width: 992px) {
-  .visible-tabs {
-    display: block !important;
-  }
+@media ( min-width : 992px) {
+	.visible-tabs {
+		display: block !important;
+	}
 }
 
-@media (min-width: 992px) {
-  .hidden-tabs {
-    display: none !important;
-  }
+@media ( min-width : 992px) {
+	.hidden-tabs {
+		display: none !important;
+	}
 }
-
 
 .modal-content.ui-resizable {
-  overflow-y: scroll;
+	overflow-y: scroll;
 }
 
-
-.control-labelal{
-    float: left;
+.control-labelal {
+	float: left;
 }
 
-.demoform input:not([type=checkbox]) {
-    min-width: 320px;   /* depends how much minimum width you require */
-}
-.nobefore:before{
-   content: none;
+.demoform input:not ([type=checkbox] ) {
+	min-width: 320px; /* depends how much minimum width you require */
 }
 
+.nobefore:before {
+	content: none;
+}
 
+* {
+	box-sizing: border-box;
+}
 
-
-
-
-* { box-sizing: border-box; }
 body {
-  font: 16px Arial; 
+	font: 16px Arial;
 }
+
 .autocomplete {
-  /*the container must be positioned relative:*/
-  position: relative;
-  display: inline-block;
+	/*the container must be positioned relative:*/
+	position: relative;
+	display: inline-block;
 }
 
 .autocomplete-items {
-  border: 1px solid #d4d4d4;
-  border-bottom: none;
-  border-top: none;
-  z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
-  top: 100%;
-  left: 0;
-  right: 0;
+	border: 1px solid #d4d4d4;
+	border-bottom: none;
+	border-top: none;
+	z-index: 99;
+	/*position the autocomplete items to be the same width as the container:*/
+	top: 100%;
+	left: 0;
+	right: 0;
 }
+
 .autocomplete-items div {
-  padding: 10px;
-  cursor: pointer;
-  background-color: #fff; 
-  border-bottom: 1px solid #d4d4d4; 
+	padding: 10px;
+	cursor: pointer;
+	background-color: #fff;
+	border-bottom: 1px solid #d4d4d4;
 }
+
 .autocomplete-items div:hover {
-  /*when hovering an item:*/
-  background-color: #e9e9e9; 
+	/*when hovering an item:*/
+	background-color: #e9e9e9;
 }
+
 .autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important; 
-  color: #ffffff; 
+	/*when navigating through the items using the arrow keys:*/
+	background-color: DodgerBlue !important;
+	color: #ffffff;
 }
