--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
@@ -124,3 +124,8 @@ body {
 	background-color: DodgerBlue !important;
 	color: #ffffff;
 }
+
+
+.list-group-hover .list-group-item:hover {
+    background-color: #f5f5f5;
+}
