Fix design issues in both Joiner and editor
- Regenerate the default simulation on changing any parameter value.
- Show the controlled vocabulary on mouse click or focus on the input
field.
- Make all html tables responsive and scrollable.
- Make all field responsive on mouse click to fit its content and
retrieve default on mouse blur.
- fix the deletion and add new row issue in all tables.

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
@@ -129,3 +129,10 @@ body {
 .list-group-hover .list-group-item:hover {
     background-color: #f5f5f5;
 }
+
+
+.table{
+   overflow-y:auto;
+   height:300px;
+   display:block;
+}
