--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/joiner/joiner.css
@@ -126,3 +126,9 @@ body {
 	background-color: DodgerBlue !important;
 	color: #ffffff;
 }
+
+.table{
+   overflow-y:auto;
+   height:300px;
+   display:block;
+}
