--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/fskeditorjs/fskeditorjs.css
@@ -136,3 +136,24 @@ body {
    height:400px;
    display:block;
 }
+
+.MuiFormHelperText-root-119 {
+  color: rgba(0, 0, 0, 0.54);
+  margin: 0;
+  font-size: 1.5rem;
+  text-align: left;
+  margin-top: 8px;
+  min-height: 1em;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  line-height: 1em;
+}
+.MuiFormHelperText-dense-120 {
+  margin-top: 4px;
+}
+.MuiFormHelperText-error-121 {
+  color: #ff1744;
+}
+.MuiFormHelperText-disabled-122 {
+  color: rgba(0, 0, 0, 0.42);
+}
+
