New UI for simulation configurator node

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/jssimulator.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/jssimulator.css
@@ -4,7 +4,13 @@
 }
 
 .parametersDiv {
-
 	border-left: 1px solid;
-	
+}
+
+.form-horizontal {
+	padding-top: 5px;
+}
+
+.collapse {
+	padding-top: 7px;
 }
