--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/newjoiner/joiner.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/newjoiner/joiner.css
@@ -1,6 +1,10 @@
 /* JointJS div */
-#paper {
+/* #paper {
     width: 100%;
     height: 500px;
     overflow: scroll;
-}
+} */
+
+/* #paper {
+    overflow: hidden;
+} */
