--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/newjoiner/joiner.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/nodes/newjoiner/joiner.css
@@ -1,10 +1,4 @@
 /* JointJS div */
-/* #paper {
-    width: 100%;
-    height: 500px;
-    overflow: scroll;
-} */
-
-/* #paper {
-    overflow: hidden;
-} */
+#detailsForm {
+    padding: 10px;
+}
