Support models reordering, useCurrentValueAsDefault, Mouseover tooltip

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/joiner/joiner.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/joiner/joiner.css
@@ -19,3 +19,11 @@
 #viewContent {
     padding: 5px;
 }
+
+.html-element select,
+.html-element input,
+.html-element button {
+    /* Enable interacting with inputs only. */
+    pointer-events: all;
+}
+
