--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/simulator/jssimulator.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/simulator/jssimulator.css
@@ -1,6 +1,9 @@
 /* Add borders to main divs. */
 .simulationsDiv{
-
+	width: 100%;
+	height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .parametersDiv {
