--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css
@@ -10,6 +10,10 @@
     /* font-weight: bold; */
     color: #31708f;
 }
+.CodeMirror-lines {
+    cursor: text;
+    min-height: 300px;
+}
 
 #viewContent {
     padding: 5px;
