--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css
@@ -24,4 +24,16 @@
 	height: 100%;
     padding: 0;
     margin: 0;
+    /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+html, body {
+    font-family: "Arial", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.375;
+    color: #393939;
+    text-align: left;
 }
