--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/simulator/jssimulator.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/simulator/jssimulator.css
@@ -1,4 +1,13 @@
 /* Add borders to main divs. */
+html, body {
+    font-family: "Arial", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.375;
+    color: #393939;
+    text-align: left;
+}
+
 .simulationsDiv{
 	width: 100%;
 	height: 100%;
