Fix CSS for headers

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v1.9/editor/editor.css
@@ -24,9 +24,6 @@
 	height: 100%;
     padding: 0;
     margin: 0;
-    /* Add shadows to create the "card" effect */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
 }
 
 html, body {
@@ -36,4 +33,7 @@ html, body {
     line-height: 1.375;
     color: #393939;
     text-align: left;
+}
+.modal-nav {
+    background-color: #F7F7FB;
 }
