--- a/de.bund.bfr.knime.js/src/scss/theme/modal-details.scss
+++ b/de.bund.bfr.knime.js/src/scss/theme/modal-details.scss
@@ -32,4 +32,30 @@
 	}
 }
 
-
+pre.precss {
+	tab-size: 4;
+	counter-reset: line;
+	padding: 0;
+	color: rgb(255, 255, 255);
+	background-color: rgb(255, 255, 255);
+	font-size: 16px;
+	line-height: 16px;
+}
+pre.precss {
+	background: #ffffff; 
+	color: #303030;
+	padding: 10px 16px;
+  }
+pre.precss span {
+	display: block;
+	line-height: 1.5rem;
+  }
+pre.precss span:before {
+	counter-increment: line;
+	content: counter(line);
+	display: inline-block;
+	border-right: 1px solid #ddd;
+	padding: 0 .5em;
+	margin-right: .5em;
+	color: #888
+}
