--- a/de.bund.bfr.knime.js/src/scss/theme/modal-details.scss
+++ b/de.bund.bfr.knime.js/src/scss/theme/modal-details.scss
@@ -59,3 +59,14 @@ pre.precss span:before {
 	margin-right: .5em;
 	color: #888
 }
+.errorMessages{
+    display: none;
+    list-style-type: none;
+    color: #B94A48;
+    background-color: #F2DEDE;
+    border: 2px solid #EED3D7;
+    border-radius: 4px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+}
+
+
