forbid constant parameters ovveride

--- a/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v2.0/joiner/joiner.css
+++ b/de.bund.bfr.knime.fsklab.nodes/js-src/de/bund/bfr/knime/fsklab/v2.0/joiner/joiner.css
@@ -104,3 +104,8 @@ input::-webkit-inner-spin-button {
 input:disabled{
     background-color:white;
 }
+
+/* port styling */
+.available-magnet {
+    fill: rgb(38, 255, 39);
+}
