added footer with EFSA disclaimers

--- a/de.bund.bfr.knime.js/src/scss/main.scss
+++ b/de.bund.bfr.knime.js/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import "theme/modals";
 @import "theme/nav";
 @import "theme/tables";
+@import "theme/footer";
 
 @import "theme/modal-details";
 @import "theme/modal-simulation";
