increased margin-bottom

--- a/de.bund.bfr.knime.js/src/scss/theme/footer.scss
+++ b/de.bund.bfr.knime.js/src/scss/theme/footer.scss
@@ -8,11 +8,15 @@
     width: 100%;
     text-align: center;
     margin-top:auto;
-    flex: 0 0 50px;
+    flex: 0 0 80px;
 }
 #footer_p{
     margin: 0 !important;
 }
+#footer_div{
+    margin: 0 !important;
+}
+
 body{
-    margin-bottom:50px;
+    margin-bottom:80px;
 }
