made the horizontal scrollbar visible to modal tables

--- a/de.bund.bfr.knime.js/src/scss/theme/modal-details.scss
+++ b/de.bund.bfr.knime.js/src/scss/theme/modal-details.scss
@@ -13,6 +13,14 @@
 		position: sticky;
 		left: 0;
 	}
+	.table-toolbar {
+		position: sticky;
+		left: 0;
+	}
+	.panel-heading {
+		position: sticky;
+		left: 0;
+	}
 	.tab-pane {
 		overflow: auto;
 		-webkit-overflow-scrolling: touch;
